<resources>
    <string name="app_name">CalendarProject</string>
    <string name="month">Month</string>
    <string name="rightArrow"><![CDATA[->]]></string>
    <string name="testMonth">June 2023</string>
    <string name="leftArrow"><![CDATA[<-]]></string>
    <string name="sundayAbbrv">SUN</string>
    <string name="mondayAbbrv">MON</string>
    <string name="tuesdayAbbrv">TUE</string>
    <string name="wednesdayAbbrv">WED</string>
    <string name="thursdayAbbrv">THUR</string>
    <string name="fridayAbbrv">FRI</string>
    <string name="saturdayAbbrv">SAT</string>
    <string name="_1">1</string>
    <string name="new_event">New Event</string>
    <string name="weekly">Weekly</string>
    <string name="time">Time:</string>
    <string name="date">Date:</string>
    <string name="event">Event</string>
</resources>