<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:orientation="vertical">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp">
        <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/leftArrow"
                android:textColor="@color/blue"
                android:background="@null"
                android:textStyle="bold"
                android:onClick="previousMonthAction"
                android:textSize="20sp"/>
        <TextView
                android:id="@+id/monthYearTV"
                android:layout_width="0dp"
                android:layout_height="49dp"
                android:layout_weight="2"
                android:text="@string/testMonth"
                android:textSize="20sp"
                android:textColor="#000000"
                android:textAlignment="center"/>
        <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rightArrow"
                android:textColor="@color/blue"
                android:background="@null"
                android:textStyle="bold"
                android:onClick="nextMonthAction"
                android:textSize="20sp"/>

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sundayAbbrv"
                android:textColor="@color/gray"
                android:textAlignment="center"
                android:textSize="16sp"/>
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mondayAbbrv"
                android:textColor="@color/gray"
                android:textAlignment="center"
                android:textSize="16sp"/>

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tuesdayAbbrv"
                android:textColor="@color/gray"
                android:textAlignment="center"
                android:textSize="16sp"/>

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/wednesdayAbbrv"
                android:textColor="@color/gray"
                android:textAlignment="center"
                android:textSize="16sp"/>

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/thursdayAbbrv"
                android:textColor="@color/gray"
                android:textAlignment="center"
                android:textSize="16sp"/>

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fridayAbbrv"
                android:textColor="@color/gray"
                android:textAlignment="center"
                android:textSize="16sp"/>

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/saturdayAbbrv"
                android:textColor="@color/gray"
                android:textAlignment="center"
                android:textSize="16sp"/>


    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/calendarRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

</LinearLayout>